--- a/project4/report/references.bib
+++ b/project4/report/references.bib
@@ -21,3 +21,9 @@
 	year = "2018",
 	note = "Accessible at course github repository. 25 pages.",
 }
+
+@misc{GitHubFYS4150,
+	author = "Morten Hjort-Jensen",
+	title = "GitHub FYS4150 UiO",
+	url = "https://github.com/CompPhysics/ComputationalPhysics"
+}
